<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".ui.fragment.profile.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:background="@drawable/input_shape"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/dp8"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:layoutDirection="ltr"
            android:paddingHorizontal="@dimen/dp15"
            app:layout_constraintTop_toBottomOf="@id/txtPhone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/input_shape"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/dp8"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:layoutDirection="ltr"
            android:paddingHorizontal="@dimen/dp15"
            app:layout_constraintTop_toBottomOf="@id/txtPhone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/input_shape"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/dp8"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layoutDirection="ltr"
            android:paddingHorizontal="@dimen/dp15"
            app:layout_constraintTop_toBottomOf="@id/txtPhone" />

        <TextView
            android:id="@+id/btnConfirm"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginHorizontal="@dimen/dp15"
            android:layout_marginTop="@dimen/dp25"
            android:backgroundTint="@color/them"
            android:text="@string/confirm_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txtEmail" />

    </LinearLayout>


</ScrollView>